@@ -7,14 +7,15 @@
     <name>JSON SERDE</name>
     <description>Json serialization/deserialization library which can serialize to json
         complex object graphs (with cyclic dependencies) without imposing restrictions on objects
-        from that graph (like to have getters and setters or a default constructor)</description>
+        from that graph (like to have getters and setters or a default constructor)
+    </description>
 
     <groupId>com.github.anrosca</groupId>
     <artifactId>json-serde</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
-        <java.version>15</java.version>
+        <java.version>1.8</java.version>
         <jackson.version>2.12.0</jackson.version>
         <objenesis.version>3.1</objenesis.version>
         <lombok.version>1.18.16</lombok.version>
@@ -24,6 +25,7 @@
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.javadoc.plugin.version>3.1.1</maven.javadoc.plugin.version>
+        <gpg.plugin.version>1.6</gpg.plugin.version>
     </properties>
 
     <dependencies>
@@ -69,7 +71,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefile.plugin.version}</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -96,8 +97,23 @@
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>${gpg.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>sign</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -127,4 +143,15 @@
             <email>rosca.andrei.1994@gmail.com</email>
         </developer>
     </developers>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>sonatype-nexus-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>sonatype-nexus-releases</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+    </distributionManagement>
 </project>
